--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "test": "ng test",
     "lint": "ng lint",
     "heroku-postbuild": "ng build --prod",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "debug": "DEBUG=app node server.js"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.1.2",
     "@angular/cdk": "^11.2.0",
+    "@angular/cli": "~11.1.4",
     "@angular/common": "~11.1.2",
     "@angular/compiler": "~11.1.2",
+    "@angular/compiler-cli": "~11.1.2",
     "@angular/core": "~11.1.2",
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.1.2",
@@ -24,13 +27,14 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "angular-in-memory-web-api": "^0.11.0",
+    "chalk": "^4.1.0",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "ngx-perfect-scrollbar": "^10.1.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "@angular/cli": "~11.1.4",
-    "@angular/compiler-cli": "~11.1.2",
     "typescript": "~4.1.2",
     "zone.js": "~0.11.3"
   },
